# Launchsim

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  vercel (1).json  vercel.json  vercelignore
api/: index.py  requirements.txt
backend/: app.py  pyproject.toml  requirements-prod.txt
backend/app/: __init__.py  config.py
backend/app/api/: simulation.py
backend/app/services/: report_agent.py
backend/app/storage/: memory_storage.py
docs/: progress.md
frontend/: index.html
frontend/public/: home-styles.css
frontend/src/: App.vue
frontend/src/api/: simulation.js
frontend/src/components/: HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/views/: Home.css  Home.vue  InteractionView.vue  MainView.vue  ReportView.vue  SimulationRunView.vue  SimulationView.vue
